// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode off) 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@selector(unknown)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 1,
    },
    "status": "Active",
    "weight": 1,
  },
  "@component(Test)-:ra:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@selector(unknown)-1": {
        "flags": 5,
        "operation": "useAtomSelector",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
  "@selector(unknown)-1": {
    "className": "SelectorInstance",
    "observers": {
      "@component(Test)-:ra:": {
        "flags": 5,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 1,
    },
    "status": "Active",
    "weight": 2,
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode off) 2`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@selector(unknown)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 2,
    },
    "status": "Active",
    "weight": 1,
  },
  "@component(Test)-:ra:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@selector(unknown)-1": {
        "flags": 5,
        "operation": "useAtomSelector",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
  "@selector(unknown)-1": {
    "className": "SelectorInstance",
    "observers": {
      "@component(Test)-:ra:": {
        "flags": 5,
        "operation": "useAtomSelector",
      },
    },
    "sources": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 2,
    },
    "status": "Active",
    "weight": 2,
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode on) 1`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@selector(unknown)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 1,
    },
    "status": "Active",
    "weight": 1,
  },
  "@component(Test)-:rb:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@selector(unknown)-1": {
        "flags": 5,
        "operation": "useAtomValue",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
  "@selector(unknown)-1": {
    "className": "SelectorInstance",
    "observers": {
      "@component(Test)-:rb:": {
        "flags": 5,
        "operation": "useAtomValue",
      },
    },
    "sources": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 1,
    },
    "status": "Active",
    "weight": 2,
  },
}
`;

exports[`useAtomSelector inline selector that returns a different object reference every time only triggers one extra rerender (strict mode on) 2`] = `
{
  "1": {
    "className": "AtomInstance",
    "observers": {
      "@selector(unknown)-1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "sources": {},
    "state": {
      "val": 2,
    },
    "status": "Active",
    "weight": 1,
  },
  "@component(Test)-:rb:": {
    "className": "ExternalNode",
    "observers": {},
    "sources": {
      "@selector(unknown)-1": {
        "flags": 5,
        "operation": "useAtomValue",
      },
    },
    "state": undefined,
    "status": "Active",
    "weight": 3,
  },
  "@selector(unknown)-1": {
    "className": "SelectorInstance",
    "observers": {
      "@component(Test)-:rb:": {
        "flags": 5,
        "operation": "useAtomValue",
      },
    },
    "sources": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": {
      "val": 2,
    },
    "status": "Active",
    "weight": 2,
  },
}
`;

exports[`useAtomSelector inline selectors are swapped out in strict mode double-renders 1`] = `
{
  "@selector(unknown)-1": {
    "className": "SelectorInstance",
    "observers": {
      "@component(Test)-:r9:": {
        "flags": 5,
        "operation": "useAtomValue",
      },
    },
    "sources": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 1,
    "status": "Active",
    "weight": 2,
  },
}
`;

exports[`useAtomSelector inline selectors are swapped out in strict mode double-renders 2`] = `
{
  "@selector(unknown)-1": {
    "className": "SelectorInstance",
    "observers": {
      "@component(Test)-:r9:": {
        "flags": 5,
        "operation": "useAtomValue",
      },
    },
    "sources": {
      "1": {
        "flags": 1,
        "operation": "get",
        "p": undefined,
      },
    },
    "state": 1,
    "status": "Active",
    "weight": 2,
  },
}
`;
